<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="832dp"
            android:layout_height="52dp"
            android:background="@color/material_dynamic_neutral90"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backPageImage"
            android:layout_width="81dp"
            android:layout_height="61dp"
            android:contentDescription="@string/navImg"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/articleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/Heading"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backPageImage"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="0dp"
            android:layout_height="122dp"
            android:contentDescription="@string/article_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:srcCompat="@mipmap/thereachlogo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/articleHeadline"
            android:layout_width="413dp"
            android:layout_height="81dp"
            android:layout_marginStart="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/article_header"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleImage" />

        <TextView
            android:id="@+id/articleDate"
            android:layout_width="416dp"
            android:layout_height="24dp"
            android:layout_marginStart="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/articleDate"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleHeadline" />

        <TextView
            android:id="@+id/articleParagraph1"
            android:layout_width="420dp"
            android:layout_height="224dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/paragraph1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleDate" />

        <TextView
            android:id="@+id/articleParagraph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/paragraph2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleParagraph1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>